# serving-blueprint

./: .env  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  TODO.md  compose.api.yaml  compose.mo.yaml  compose.rr.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  worker.py  workspace.ipynb
config/: config.yaml  config_docker.yaml  ml_config.yaml
deployment/prometheus/: prometheus.yml
dev/: config.yaml
docs/: model_notes.md
mlops/grafana/dashboards/: fastapi-dashboard.json
mlops/grafana/datasources/: elasticsearch.yaml
mlops/prometheus/: prometheus.yml
src/api/: app.py  route.py  router.py  schemas.py
src/api/routes/: health.py  text_embedding.py
src/api/schemas/: __init__.py  embedding.py  task.py
src/core/: logger.py  logging.py
src/core/config/: __init__.py  main.py  ml.py
src/ml/: style_transfer_service.py  text_embedding_service.py
src/monitoring/: instrumentator.py  metrics.py
src/workers/: style_transfer_workers.py  text_embedding_workers.py  worker.py  worker_factory.py
