[project]
name = "serving-blueprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "elasticsearch>=8.17.2",
    "fastapi>=0.115.11",
    "light-embed==1.0.7",
    "onnxruntime>=1.19.2",
    "pillow>=11.1.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ipython==8.22.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "pymongo>=4.11.1",
]
